Build with Java8 and set mc version 1.16.5